--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -8,10 +8,42 @@
  
     
 }
+
+/* Tablet  and Mobile Layout: 768px. */
+@media only screen and (max-width: 991px) { 
+ 
+    .single-portfolio-item-27{
+    	width: 50%;
+    }
+    .portfolio-list-27{
+    	margin-bottom: 400px
+    }
+	    .footer-logo {
+	  margin-left: 70px;
+
+	  }
+}
 /* Mobile Layout: 320px. */
 @media only screen and (max-width: 767px) { 
+
+	.off-canvus-menu{
+		width: 100%;
+		right:-100%;
+	}
  
-    
+      .single-portfolio-item-27, .single-portfolio-item-27.boxed{
+    	width: 100%;
+    	height: 430px;
+    }
+     .portfolio-list-27{
+    	margin-bottom: 0;
+    }
+    .footer-area-27{
+    	position: relative;
+    }
+    .footer-area-27 .col-md-3{
+    	margin-bottom: 40px;
+    }
 }
 /* Wide Mobile Layout: 480px. */
 @media only screen and (min-width: 480px) and (max-width: 767px) { 
